# Simple_Average_Expenses

./: CMakeLists.txt  CMakeLists.txt.user.7043714  Interface.qml  README.md  expenses_controller.cpp  expenses_controller.h  main.cpp  main.qml  qml.qrc
